--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-
+torch==2.6.0
+torchvision==0.21.0
+numpy==1.26.4
+opencv-python==4.11.0
+scikit-learn==1.6.1
+matplotlib==3.10.1
+seaborn==0.13.2
+tqdm==4.67.1
+torchmetrics==1.6.1
